This is the CHANGELOG for amavisd-milter.

20081029:
	Memory leak fron fts_alloc() on Solaris fixed.

	Luke Mewburn wrote:
	  In examining the code, it appears that the implementation of
	  fts_alloc() can leak the struct stat fts_statp if you're not using
	  ALIGNBYTES() && ALIGN(), which I guess that Solaris doesn't have.
	  Given that the leaked buffers are 160 bytes in size (184960/1156),
	  I suspect that's sizeof(struct stat) and our culprit.

	Thanks to: Henrik Krohns <hege@hege.li>
	Submitted by: Luke Mewburn <luke@mewburn.net>

20081028:
	Compatibility fix - Solaris doesn't have dirfd().

	Thanks to: Henrik Krohns <hege@hege.li>

20080701:
	Sync fts_open.c with the NetBSD libc (upstream) fts.c, which brought
	in a few fixes, including one that looked like a potential memory leak.
	Thanks to: Luke Mewburn <luke@mewburn.net>

	Properly check -D option parameters.
	Thanks to: Henrik K <hege@hege.li>

20080310:
	Convert CRLF to LF in mail body, because sendmail send always CRLF,
	but amavisd-new requires that a message on a temporary file is in
	a native text format of a host's file system, i.e. with LF terminated
	lines on Unix or Linux.
	Thanks to: David Schweikert <david@schweikert.ch> and Mark Martinec
	<Mark.Martinec@ijs.si>

20070923:
	amavisd-milter-1.3.1

	Bug fixies:
	- Properly calculate timezone offset for synthesized Received header
	  on platforms where gmtime() and localtime() returns the pointer to
	  the same static struct.

20070923:
	Better explained -D option.

20070915:
	In mlfi.c:mlfi_envfrom() the gmtime() and localtime() call returns the
	pointer to the same static struct.  Thus pointers gt and lt are
	identical and the UTC offset is always +0000 which is bogus.
	Thanks to: Curtis Doty <curtis@greenkey.net>

20070902:
	amavisd-milter-1.3.0

	New features:
	- Implemented AM.PDP request attribute policy_bank (amavisd-new
	  2.5.0 or higher is required).  Currently SMTP_AUTH, SMTP_AUTH_<MECH>