@@ -1,6 +1,12 @@
 This is the CHANGELOG for amavisd-milter.
 
 20081029:
+	Compatibility fix - Solaris 9 and older doesn't have sem_timedwait.
+	Use sem_trywait if sem_timedwait isn't available.
+
+	Thans to: Henrik Krohns <hege@hege.li>
+
+20081029:
 	Memory leak fron fts_alloc() on Solaris fixed.
 
 	Luke Mewburn wrote:
@@ -322,4 +328,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.58 2008/10/28 23:27:28 reho Exp $
+$Id: CHANGES,v 1.59 2008/10/28 23:45:29 reho Exp $
